--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc --outDir dist",
+    "lint": "tslint --project tsconfig.json --type-check --format stylish",
     "clean": "rimraf dist",
     "prebuild": "npm run clean"
   },
@@ -12,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "rimraf": "^2.6.1",
+    "tslint": "^5.1.0",
     "typescript": "^2.2.2"
   }
 }
